--- a/src/app/pages/snack/snack.component.html
+++ b/src/app/pages/snack/snack.component.html
@@ -28,7 +28,7 @@
                 <ion-col size="9">
                   <ion-row class="ion-align-items-center">
                     <ion-col size="9">
-                      <ion-select class="ion-select-custom ion-border-bottom ion-border-primary" value="1"
+                      <ion-select class="ion-select-custom ion-border-bottom ion-border-primary"
                           name="snack" [(ngModel)]="service.model" placeholder="Elige una opcion" required>
                           <ion-select-option [value]="snack" *ngFor="let snack of snacks">
                               {{ snack.name }}
@@ -47,8 +47,8 @@
                   </ion-row>
                 </ion-col>
                 <ion-col size="3">
-                    <ion-button expand="block" class="ion-h-100 ion-m-0" [disabled]="form.invalid || form.untouched"
-                      (click)="service.onAdd()">
+                    <ion-button expand="block" class="ion-h-100 ion-m-0" [disabled]="form.invalid || form.untouched || service.model.count < 1"
+                        (click)="service.onAdd()">
                     <ion-icon name="add" slot="icon-only"></ion-icon>
                   </ion-button>
                 </ion-col>
