--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,3 +1,11 @@
+<ion-header class="ion-no-border">
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="/app/home" color="primary"></ion-back-button>
+        </ion-buttons>
+    </ion-toolbar>
+</ion-header>
+
 <ion-content>
 
   <ion-row class="ion-justify-content-center ion-mt-5 ion-mb-4">
@@ -16,7 +24,8 @@
       <ion-col>
         <ion-input-wrapper [ctrl]="email" label="Correo electronico">
           <ion-input name="email" [(ngModel)]="model.email" #email="ngModel"
-            class="ion-border-bottom ion-border-primary" [pattern]="PATTERNS.email" required>
+            class="ion-border-bottom ion-border-primary" [pattern]="PATTERNS.email"
+            placeholder="admin@admin.com" required>
           </ion-input>
         </ion-input-wrapper>
       </ion-col>
@@ -26,7 +35,8 @@
       <ion-col>
         <ion-input-wrapper [ctrl]="password" label="Contraseña">
           <ion-input type="password" name="password" [(ngModel)]="model.password"
-            class="ion-border-bottom ion-border-primary" #password="ngModel" minlength="8" required>
+            class="ion-border-bottom ion-border-primary" #password="ngModel" minlength="8"
+            placeholder="admin123" required>
           </ion-input>
         </ion-input-wrapper>
       </ion-col>
