--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,12 @@
 
 <ion-content>
 
+    <ion-fab vertical="top" horizontal="end" *ngIf="accountService.isAuthenticated | async">
+        <ion-fab-button (click)="logout()">
+            <ion-icon name="log-out-outline"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+
     <ion-row>
         <ion-col>
             <ion-card style="height: 12rem;">
@@ -32,10 +38,10 @@
 
     <ion-row>
         <ion-col size="6">
-            <ion-card-food title="Bebidas" imgURL="assets/img/drink-bg.jpg"></ion-card-food>
+            <ion-card-food title="Bebidas" imgURL="assets/img/drink-bg.jpg" (click)="notImplemented()"></ion-card-food>
         </ion-col>
         <ion-col size="6">
-            <ion-card-food title="Picaderas" imgURL="assets/img/popcorn-bg.jpg"></ion-card-food>
+            <ion-card-food title="Picaderas" imgURL="assets/img/popcorn-bg.jpg" (click)="notImplemented()"></ion-card-food>
         </ion-col>
     </ion-row>
     
@@ -43,7 +49,7 @@
         <ion-col>
             <ng-container *ngFor="let m of movieService.entities | async">
                 <ion-movie-ticket [name]="m.name" [schedule]="m.schedule" (click)="onSelectMovie(m)">
-                </ion-movie-ticket>
+                </ion-movie-ticket><br>
             </ng-container>
         </ion-col>
     </ion-row>
