--- a/src/scss/custom/_custom-style.scss
+++ b/src/scss/custom/_custom-style.scss
@@ -31,6 +31,7 @@
   max-height: 25rem;
   box-shadow: 2px -2px 4px rgba(0, 0, 0, .1);
   // background-color: #fff;
+  overflow: auto;
   z-index: 9999;
 
 }
